--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "Igor Claudino <igor.claudino.ic@gmail.com>",
   "license": "MIT",
   "scripts":{
-    "start":"node src/server.js",
+    "start":"node src/server.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
